--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://www.booking.com/searchresults.zh-tw.html?ss=台中%2C+台灣&lang=zh-tw&checkin=2024-12-06&checkout=2024-12-07&group_adults=2&no_rooms=1&group_children=0" target="_blank">台中</a>
+    <!-- 住宿地點 -->
     <a href="https://www.booking.com/searchresults.zh-tw.html?ss=台北&lang=zh-tw&checkin=2024-12-06&checkout=2024-12-07&group_adults=2&no_rooms=1&group_children=0
     " target="_blank">台北</a>
-    <a href="https://www.booking.com/searchresults.zh-tw.html?ss=台南%2C+台灣&lang=zh-tw&checkin=2024-12-06&checkout=2024-12-07&group_adults=2&no_rooms=1&group_children=0" target="_blank">台南</a>
+    
 </body>
 </html>
