--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -4,77 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>旅遊規劃</title>
-    <style>
-        /* 表格基本樣式 */
-        table {
-            border-collapse: collapse; /* 讓邊框合併 */
-            margin-top: 20px;
-            font-family: Arial, sans-serif; /* 字體 */
-        }
-
-        /* 表格標題行 */
-        thead {
-            background-color: #f2f2f2; /* 淺灰色背景 */
-            color: #333; /* 標題文字顏色 */
-        }
-
-        thead th {
-            padding: 12px;
-            text-align: left;
-            border: 1px solid #ddd; /* 邊框顏色 */
-            font-size: 16px;
-        }
-
-        /* 表格資料行 */
-        tbody td {
-            padding: 12px;
-            border: 1px solid #ddd;
-            font-size: 14px;
-            text-align: left;
-        }
-
-        /* 表格行 hover 效果 */
-        tbody tr:hover {
-            background-color: #f9f9f9; /* 鼠標懸停時改變行背景色 */
-        }
-
-        /* 添加捲動條 */
-        td p {
-            max-height: 100px;
-            overflow-y: auto;
-            word-wrap: break-word;
-            margin: 0;
-            padding: 5px;
-        }
-
-        /* 操作按鈕 */
-        button.addAttraction {
-            background-color: #4CAF50; /* 綠色背景 */
-            color: white;
-            padding: 8px 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button.addAttraction:hover {
-            background-color: #45a049; /* 滑鼠懸停時的背景顏色 */
-        }
-
-        /* 提升表格的可讀性 */
-        td a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-
-        td a:hover {
-            text-decoration: underline;
-        }
-        .box{
-            display: flex;
-        }
-    </style>
+    <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
     <!-- 表單 -->
@@ -109,17 +39,23 @@
         <input type="date" id="endDate" name="endDate" required>
         <button type="submit" id="submit">送出</button>
     </form>
-        <div class="box" id="attractionsList"></div>
-        <div class="box" id="selectedAttractions"></div>
-        <button id="save">儲存</button>
+        <div class="box" id="attractionsDiv"></div>
+        <div class="box" id="selectedAttractionsDiv"></div> 
     <!-- 住宿地點 -->
      <h2>Booking</h2>
-    <a id="booking_city" href="https://www.booking.com/searchresults.zh-tw.html?ss=台北&lang=zh-tw&checkin=2024-12-06&checkout=2024-12-07&group_adults=2&no_rooms=1&group_children=0" target="_blank">選擇住宿</a>
-    <a href="https://secure.booking.com/mytrips.zh-tw.html" target="_blank">我的訂單</a>
-    
+     <div id="booking">
+        <a id="booking_city" href="https://www.booking.com/searchresults.zh-tw.html?ss=台北&lang=zh-tw&checkin=2024-12-06&checkout=2024-12-07&group_adults=2&no_rooms=1&group_children=0" target="_blank">選擇住宿</a>
+        <a href="https://secure.booking.com/mytrips.zh-tw.html" target="_blank">我的訂單</a>
+     </div>
+    <!-- checkbox -->
+     <h2>必備物品</h2>
+     <div id="essentialItemsDiv"></div>
+    <!-- 儲存 -->
+     <button id="save">儲存</button>
     <!-- JavaScripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./javascripts/attractions.js"></script>
+    <script src="./javascripts/essentialItems.js"></script>
     <script src="./javascripts/travel.js"></script>
-    <script src="./javascripts/api.js"></script>
 </body>
 </html>
