--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -42,14 +42,18 @@
         <div class="box" id="attractionsDiv"></div>
         <div class="box" id="selectedAttractionsDiv"></div> 
     <!-- 住宿地點 -->
+     <div class="box">
+     <div class="booking">
      <h2>Booking</h2>
      <div id="booking">
         <a id="booking_city" href="https://www.booking.com/searchresults.zh-tw.html?ss=台北&lang=zh-tw&checkin=2024-12-06&checkout=2024-12-07&group_adults=2&no_rooms=1&group_children=0" target="_blank">選擇住宿</a>
         <a href="https://secure.booking.com/mytrips.zh-tw.html" target="_blank">我的訂單</a>
      </div>
+    </div>
     <!-- checkbox -->
      <h2>必備物品</h2>
      <div id="essentialItemsDiv"></div>
+    </div>
     <!-- 儲存 -->
      <button id="save">儲存</button>
     <!-- JavaScripts -->
