travelInfo to database

--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -54,6 +54,7 @@
      <button id="save">儲存</button>
     <!-- JavaScripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./javascripts/travelInfo.js"></script>
     <script src="./javascripts/attractions.js"></script>
     <script src="./javascripts/essentialItems.js"></script>
     <script src="./javascripts/travel.js"></script>
